[package]
name = "nums"
description = "Number theoretic functions, such as primality testing and factorization, for BigUints"
authors = ["Daniel Lubarov <daniel@lubarov.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/0xPolygonZero/nums/"
license = "MIT OR Apache-2.0"
keywords = ["bigint", "prime", "factor"]
categories = ["mathematics", "no-std"]

[dependencies]
num-bigint = { version = "0.4.5", features = ["rand"] }
num-traits = "0.2.19"
num-integer = "0.1.46"
rand = "0.8.5"
tracing = "0.1.40"
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
