[package]
name = "nums"
description = "Number theoretic functions, such as primality testing and factorization, for BigUints"
authors = ["Daniel Lubarov <daniel@lubarov.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/0xPolygonZero/nums/"
license = "MIT OR Apache-2.0"
keywords = ["bigint", "prime", "factor"]
categories = ["mathematics", "no-std"]

[dependencies]
num-bigint = { version = "0.4.4", features = ["rand"] }
num-traits = "0.2.19"
num-integer = "0.1.46"
rand = "0.8.5"
